PLFENG-2885 exo-maven-setup-done

--- a/marketplace-extension/eXo-Marketplace-Addon.html
+++ b/marketplace-extension/eXo-Marketplace-Addon.html
@@ -39,7 +39,7 @@
                         </tr>
                         <tr>
                             <td class="features-cell1"><img src="../resources/arrow-icon.png"></td>
-                            <td class="features-cell2">Administrative user: &nbsp;&nbsp; username: root / password: password</td>
+                            <td class="features-cell2">Administrative user: &nbsp;&nbsp; username: admin / password: password</td>
                         </tr>
                     </tbody>
                 </table>
