PLFENG-2885 update html welcome pages

--- a/marketplace-extension/eXo-Marketplace-Addon.html
+++ b/marketplace-extension/eXo-Marketplace-Addon.html
@@ -51,19 +51,19 @@
                     <tbody>
                         <tr>
                             <td class="features-cell1"><img src="../resources/arrow-icon.png"></td>
-                            <td class="features-cell2">config/ : portal container extension jar</td>
+                            <td class="features-cell2">The following steps will take place automatically:</td>
                         </tr>
                         <tr>
                             <td class="features-cell1"><img src="../resources/arrow-icon.png"></td>
-                            <td class="features-cell2">war/ : web app resources, portlets, gadgets and any other customization</td>
+                            <td class="features-cell2">The Marketplace Add-on will be built using maven in the runner environment.</td>
                         </tr>
                         <tr>
                             <td class="features-cell1"><img src="../resources/arrow-icon.png"></td>
-                            <td class="features-cell2">ear : .ear packaging for JBoss</td>
+                            <td class="features-cell2">The Marketplace Add-on will be deployed to the runner's eXo instance</td>
                         </tr>
                         <tr>
                             <td class="features-cell1"><img src="../resources/arrow-icon.png"></td>
-                            <td class="features-cell2">addon : .zip packaging for eXo add-on manager</td>
+                            <td class="features-cell2">The runner's eXo instance will be started and you'll be able to test your addon.</td>
                         </tr>
 
                     </tbody>
